tests/snapshots/regression/semantic_types__modules__private_member__main.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/modules/private_member/main.flx
exit_code: 1

[1 of 9] Compiling  Assert
[2 of 9] Compiling  Array
[3 of 9] Compiling  IO
[4 of 9] Compiling  List
[5 of 9] Compiling  Numeric
[6 of 9] Compiling  Option
[7 of 9] Compiling  String
[8 of 9] Compiling  Math
• 1 error • tests/fixtures/semantic_types/modules/private_member/main.flx
error[E011]: Private Member

Cannot access private member `hidden`.

  tests/fixtures/semantic_types/modules/private_member/main.flx:4:5
  |
4 |     M.hidden(1)
  |     ^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
